<resources>
    <string name="app_name">TradeApp</string>
    <string name="chanel_name">MyChanelNotification</string>
    <string name="channel_description">MyChanelDesc</string>
    <string name="last_gas">Last gas:</string>
    <string name="block_date">Block date:</string>
    <string name="last_price">Last price:</string>
    <string name="info">Info:</string>
    <string name="go_to_etherscan_button_title">Go to etherscan</string>
    <string name="uri_farmdashboard_websocket">"https://api.farmdashboard.xyz:4140/stomp/websocket"</string>
    <string name="uri_farmdashboard_websocket_test">"http://192.168.1.68:4140//stomp/websocket"</string>
    <string name="farm_price_label">Farm Price</string>
    <string name="no_internet_connection">Sorry,no internet connection</string>
    <string name="info_label">info</string>
    <string name="blockdate_label">blockDate</string>
    <string name="lastgas_label">lastGas</string>
    <string name="lastprice_label">lastPrice</string>
    <string name="hash_label">hash</string>
    <string name="sdf_parser">d/MM/yyyy hh:mm:ss aaa</string>
</resources>