<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Theme.AppCompat.Light"
    android:layout_height="wrap_content"
    tools:context=".activities.MoreInfoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#888acfac">

        <TextView
            android:id="@+id/textViewTradeInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textStyle="bold"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLastGasTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_gas"
            android:textStyle="bold"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/textViewBlockDateTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="19dp" />
        <TextView
            android:id="@+id/textViewLastPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/textViewLastGasTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/last_price"/>
        <TextView
            android:id="@+id/textViewBlockDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:text="@string/block_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTradeInfoTitle"/>

        <Button
            android:id="@+id/buttonGoToEtherscan"
            android:layout_width="140dp"
            android:layout_height="33dp"
            android:background="#eec06b"
            android:onClick="onClickGoToEtherscan"
            android:text="@string/go_to_etherscan_button_title"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"

            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp"
            app:layout_constraintGuide_percent="0.27
"/>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBlockDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

        <TextView
            android:id="@+id/textViewLastGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewBlockDate" />

        <TextView
            android:id="@+id/textViewLastPriceDetale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewLastGas" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>